Bugfix: Fix bisq dashboard tables overflow. (#733)
* Fix bisq dashboard tables overflow.

* Fix nav-item mobile margin.

--- a/frontend/src/app/bisq/bisq-dashboard/bisq-dashboard.component.scss
+++ b/frontend/src/app/bisq/bisq-dashboard/bisq-dashboard.component.scss
@@ -17,19 +17,6 @@
     z-index: 100;
 }
 
-.table-container {
-    overflow: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    font-size: 13px;
-    @media(min-width: 576px){
-        font-size: 16px;
-    }
-    &::-webkit-scrollbar {
-        display: none;
-    }
-}
-
 .container-info{
     overflow-x: scroll;
 }
